package main;

option java_package = "com.gamebean.sanguocard.message.cooperation";
option java_outer_classname = "CooperationProtos";

message CooperationRequest {
 //911
}

message CooperationResponse {
  repeated  CooperationModel cooperationModel=1;
}

message CooperationModel{
	optional int32 roleId=1;
	optional string name=2;
	optional int32 type=3;
	optional int32 itemId=4;
	optional int32 itemLevel=5;
	optional int32 roleLv=6;
	
	optional sint32 inList = 7;
}

message CooperationFillRequest{
//913
}

message CooperationFillResponse{
optional int32 state=1;
}